alignment fix?

--- a/home/tomcotton.config/.config/waybar/style.css
+++ b/home/tomcotton.config/.config/waybar/style.css
@@ -35,6 +35,8 @@ window#waybar {
     transition: all 0.3s ease;
     min-width: 25px;
     justify-content: center;
+    display: flex;
+    align-items: center;
 }
 
 #workspaces button:hover {
